# converter-file

./: .gitignore  CONTEXT.md  README.md  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml
converter_file/: api.py  audio_options.py  convert_document.py  convert_image.py  convert_media.py  detect.py  document_options.py  estimate.py  main.py  menu.py  video_options.py
docs/superpowers/plans/: 2026-06-25-file-converter-cli.md
electron/: dialogs.js  dialogs.test.js  main.js  preload.js  storage.js  storage.test.js
electron/renderer/: index.html  renderer.js  styles.css
tests/: test_api.py  test_audio_options.py  test_convert_document.py  test_convert_image.py  test_convert_media.py  test_detect.py  test_document_options.py  test_estimate.py  test_main.py  test_menu.py  test_video_options.py
